--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#vag">Vagas/freelas</a></li>
                 <li><a href="#repos">Outros repositórios de links</a></li>
                 <li><a href="#algcode">Algoritmos</a></li>
-                <li><a href="#javas">JavaScript</a></li>
+                <li><a href="#ling">Linguagens de programação</a></li>
                 <li><a href="#css">CSS</a></li>
                 <li><a href="#uiux">UI/UX</a></li>
                 <li><a href="#linux">Linux</a></li>
@@ -45,10 +45,9 @@
                 <li><a href="#forum">Fóruns</a></li>
                 <li><a href="#notic">Notícias</a></li>
                 <li><a href="#gerar">IA</a></li>
-                <li><a href="#mb">Motores de busca</a></li>
                 <li><a href="#diver">Diversos</a></li>
-                <li><a href="#xxx">XXXX</a></li>
-                <li><a href="#xxx">XXXX</a></li>
+                <li><a href="#rede">Redes</a></li>
+                <li><a href="#deepw">DeepWeb (onion)</a></li>
             </ol>
         </div>
 
@@ -78,29 +77,37 @@
                     <li ><a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x" target="_blank">Curso CS50 (video &#45; en)</a> &#45; curso da universidade de Harvard sobre introdução à ciência da computação (site edx)</li>
                     <li ><a href="http://alumni.cs.ucr.edu/~pdiloren/C++_Pointers/" target="_blank">Learning C++ Pointers for REAL Dummies (texto &#45; en)</a></li>
                     <li ><a href="https://web.dev/howbrowserswork/" target="_blank">How browsers work (texto &#45; en)</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="https://fullstackopen.com/ptbr/" target="_blank">Fullstack Open (texto &#45; pt)</a></li>
+                    <li ><a href="https://www.tutorialspoint.com/index.htm" target="_blank">TutorialsPoint</a></li>
                 </ul>
             </div>
 
             <div class="conteudo__secao">                
-                <h2 id="javas">JavaScript</h2>
-                <h3>Frameworks</h3>
+                <h2 id="ling">Linguagens de programação</h2>
+                <h3>JavaScript</h3>
                 <ul>
                     <li ><a href="https://react.dev/" target="_blank">React.js (en)</a></li>
                     <li ><a href="https://pt-br.react.dev/" target="_blank">React.js (pt)</a></li>
                     <li ><a href="https://vue-community.org/guide/learning/official-documentation.html" target="_blank">Vue.js</a></li>
                     <li ><a href="https://www.electronjs.org/" target="_blank">Electron.js</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                </ul>
-                <h3>Gerenciadores de pacotes</h3>
-                <ul>
                     <li ><a href="https://www.npmjs.com/" target="_blank">NPM</a></li>
                     <li ><a href="https://yarnpkg.com/" target="_blank">Yarn</a></li>
-                </ul>
-                <h3>Outros</h3>
-                <ul>
                     <li ><a href="https://beautifier.io/" target="_blank">js-beautify</a></li>
+                    <li ><a href="https://github.com/airbnb/javascript" target="_blank">Airbnb JavaScript Style Guide</a></li>
+                </ul>
+                <h3>C&#43;&#43;</h3>
+                <ul>
+                    <li ><a href="https://cppcon.org/" target="_blank">C&#43;&#43; Conference</a></li>
+                    <li ><a href="https://cplusplus.com/doc/tutorial/" target="_blank">C&#43;&#43; Documentation</a></li>
+                    <li ><a href="https://en.cppreference.com/w/cpp" target="_blank">C&#43;&#43; Reference</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                </ul>
+                <h3>C</h3>
+                <ul>
+                    <li ><a href="https://youtube.com/playlist?list=PLBNSZK5_7d-pY916Sb-OTeUHLMMEnO_IH&si=71ar82VYXOtwnYq6" target="_blank">Curso de Algoritmos e Programação em C - Visão Computacional (pt - YouTube)</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                 </ul>
             </div>
@@ -110,7 +117,7 @@
                 <h3>Repositórios</h3>
                 <ul>
                     <li ><a href="https://flathub.org/" target="_blank">Flathub</a></li>
-                    <li ><a href="https://raw.githubusercontent.com/fc0uto/repo_tecnologia/main/img/distros_linux.png" target="_blank">Histórico de distribuições Linux</a></li>
+                    <li ><a href="https://raw.githubusercontent.com/fc0uto/repo_tecnologia/main/img/distros_linux.png" target="_blank">Histórico de distribuições Linux</a> (by: <a href="https://github.com/FabioLolix/LinuxTimeline" target="__blank">FabioLolix</a>)</li>
                     <li ><a href="https://distrowatch.com/" target="_blank">DistroWatch</a></li>
                     <li ><a href="https://diolinux.com.br/" target="_blank">Diolinux</a></li>
                     <li ><a href="https://plus.diolinux.com.br/" target="_blank">Diolinux Plus</a></li>
@@ -333,30 +340,25 @@
 
             <div class="conteudo__secao">
                 <h2 id="diver">Diversos</h2>
-                <h3>Backend</h3>
-                <ul>
-                    <li ><a href="https://en.m.wikipedia.org/wiki/The_Power_of_10:_Rules_for_Developing_Safety-Critical_Code" target="_blank">The Power of 10: Rules for Developing Safety-Critical Code</a></li>
-                    <li ><a href="https://w3techs.com/" target="_blank">W3Techs</a> &#45; vários ranks de tecnologias</li>
-                    <li ><a href="./html/tabela_ascii.html" target="_blank">Tabela de códigos ASCII</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                </ul>
                 <h3>Browsers</h3>
                 <ul>
                     <li ><a href="https://librewolf.net/" target="_blank">LibreWolf</a> &#45; navegador derivado do Mozilla, focado em privacidade</li>
                     <li ><a href="https://www.tunnelbear.com/" target="_blank">TunnelBear</a></li>
-                    <li ><a href="https://mullvad.net/pt/browser" target="_blank">Mullvad</a></li>
                     <li ><a href="https://brave.com/pt-br/" target="_blank">Brave</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="https://mullvad.net/pt/browser" target="_blank">Mullvad</a></li>
                 </ul>
-                <h3>Outros</h3>
+                <h3>Motores de busca</h3>
                 <ul>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="https://searx.thegpm.org/" target="_blank">SearX</a></li>
+                    <li ><a href="duckduckgo.com/" target="_blank">DuckDuckGo</a></li>
+                    <li ><a href="https://www.phind.com/" target="_blank">phind</a> &#45; motor de busca voltado para desenvolvedores</li>
+                </ul>
+                <h3>Misc</h3>
+                <ul>
+                    <li ><a href="https://en.m.wikipedia.org/wiki/The_Power_of_10:_Rules_for_Developing_Safety-Critical_Code" target="_blank">The Power of 10: Rules for Developing Safety-Critical Code</a></li>
+                    <li ><a href="https://w3techs.com/" target="_blank">W3Techs</a> &#45; vários ranks de tecnologias</li>
+                    <li ><a href="https://www.asciitable.com/" target="_blank">Tabela de códigos ASCII</a></li>
+                    <li ><a href="https://it-tools.tech/" target="_blank">it tools</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                 </ul>
             </div>
@@ -455,24 +457,15 @@
             </div>
 
             <div class="conteudo__secao">
-                <h2 id="mb">Motores de busca</h2>
-                <ul>
-                    <li ><a href="https://searx.thegpm.org/" target="_blank">SearX</a></li>
-                    <li ><a href="duckduckgo.com/" target="_blank">DuckDuckGo</a></li>
-                    <li ><a href="https://www.phind.com/" target="_blank">phind</a> &#45; motor de busca voltado para desenvolvedores</li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                </ul>
-            </div>
-
-            <div class="conteudo__secao">
                 <h2 id="seg">Segurança da informação</h2>
-                <h3>Backend</h3>
                 <ul>
                     <li ><a href="https://www.simplycyber.io/free-cyber-resources" target="_blank">Repositório de links</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="https://pwn.college/" target="_blank">pwn.college</a></li>
+                    <li ><a href="https://www.openwall.com/john/" target="_blank">John the Ripper password cracker</a></li>
+                    <li ><a href="https://www.metasploit.com/" target="_blank">metasploit</a> &#45; framework para pentest</li>
+                    <li ><a href="https://www.aircrack-ng.org/" target="_blank">Aircrack-ng</a></li>
+                    <li ><a href="https://beefproject.com/" target="_blank">BeEF</a></li>
+                    <li ><a href="https://sqlmap.org/" target="_blank">sqlmap</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
@@ -484,7 +477,7 @@
                 <h2 id="repo">Outros repositórios de links</h2>
                 <ul>
                     <li ><a href="https://html.com/blog/50-computer-science-resources-students/" target="_blank">50+ Killer Resources for Computer Science Students</a></li>
-                    <li ><a href="https://resource.dreadsec.me/" target="_blank">Technology resources and links</a></li>
+                    <li ><a href="https://github.com/D7EAD/resource/" target="_blank">Technology resources and links</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
@@ -496,7 +489,19 @@
                 <h2 id="bd">Banco de dados</h2>
                 <h3>Backend</h3>
                 <ul>
+                    <li ><a href="https://mystery.knightlab.com/" target="_blank">SQL Murder Mistery</a></li>
+                    <li ><a href="https://sqlpd.com/" target="_blank">SQL Police Department</a></li>
+                    <li ><a href="https://db-engines.com/en/" target="_blank">DB-Engines</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                </ul>
+            </div>
+
+            <div class="conteudo__secao">
+                <h2 id="rede">Redes</h2>
+                <ul>
+                    <li ><a href="https://1.1.1.1/pt-BR/dns/" target="_blank">1.1.1.1 DNS</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
@@ -506,23 +511,10 @@
             </div>
 
             <div class="conteudo__secao">
-                <h2 id="XXXXX">XXXXX</h2>
+                <h2 id="deepw">DeepWeb (onion)</h2>
                 <h3>Backend</h3>
                 <ul>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
-                </ul>
-            </div>
-
-            <div class="conteudo__secao">
-                <h2 id="XXXXX">XXXXX</h2>
-                <h3>Backend</h3>
-                <ul>
-                    <li ><a href="xxxx" target="_blank">XXXX</a></li>
+                    <li ><a href="https://www.torproject.org/download/" target="_blank">TorBrowser</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
                     <li ><a href="xxxx" target="_blank">XXXX</a></li>
