--- a/index.html
+++ b/index.html
@@ -518,6 +518,25 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://ninite.com/" target="_blank">Ninite</a> &#45; pacote de programas para instalação</li>
                 </ul>
             </div>
+
+            <div class="conteudo__secao secao__reserva">
+                <h2 class="secao__titulo" id="diver">XXXXXXXXXX</h2>
+                <h3 class="secao__subtitulo">XXXXXXXXXX</h3>
+                <ul>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
+                </ul>
+            </div>
         </div>
     </main>
     <footer>
