--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Baú tecnológico &#45; repositório de tecnologia</title>
 </head>
 <body> 
-    <header class="cabecalho">
+    <header class="cabecalho" id="cabecalho__id">
         <nav class="cabecalho__nav">
             <img src="./img/chest_2.png" class="nav__img">
             <a href="#" class="nav__texto__logo"><h1 class="nav__titulo">BAÚ TECNOLÓGICO</h1></a>
@@ -17,6 +17,10 @@
     </header>
 
     <main class="corpo">
+        <div class="corpo__voltar">
+            <a href="#cabecalho__id" class="voltar__link"><img src="./img/seta.png" class="voltar__img"></a>
+        </div>
+
         <div class="corpo__intro">
             <p class="texto__1">
                 Opa, beleza? Esse é um pequeno repositório com diversos links de cursos, artigos e outros conteúdos sobre tecnologia. Recomendo utilizar o atalho de busca &#40;<code>ctrl &#43; F</code>&#41; e procurar o assunto desejado.
@@ -243,6 +247,7 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://penpot.app/" target="_blank">Penpot</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://openclipart.org/" target="_blank">Open CLip Art</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://pixabay.com/" target="_blank">Pixabay</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://pngtree.com/" target="_blank">pngtree</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Design de Interface</h3>
                 <ul>
@@ -251,6 +256,10 @@
                 <h3 class="secao__subtitulo">Sons</h3>
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://www.freesound.org/" target="_blank">Free Sound</a></li>
+                </ul>
+                <h3 class="secao__subtitulo">Outros</h3>
+                <ul>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.remove.bg/" target="_blank">remove background</a></li>
                 </ul>
             </div>
 
