--- a/index.html
+++ b/index.html
@@ -464,31 +464,29 @@
                 </ul>
                 <h3 class="secao__subtitulo">Search Engines</h3>
                 <ul>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/" target="_blank">Ahmia</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="xmh57jrknzkhv6y3ls3ubitzfqnkrwxhopf5aygthi7d6rplyvk3noyd.onion/cgi-bin/omega/omega" target="_blank">Torch</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/" target="_blank">Onion Search Engine</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="2fd6cemt4gmccflhm6imvdfvli3nf7zn6rfrwpsy7uhxrgbypvwf5fad.onion/" target="_blank">Excavator</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="e27slbec2ykiyo26gfuovaehuzsydffbit5nlxid53kigw3pvz6uosqd.onion/" target="_blank">Sentor</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="https://duckduckgogg42xjoc72x3sjasowoarfbgcmvfimaftt6twagswzczad.onion/" target="_blank">DuckDuckGo</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="e27slbec2ykiyo26gfuovaehuzsydffbit5nlxid53kigw3pvz6uosqd.onion/" target="_blank">Sentor</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/" target="_blank">http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion/</a> &#45; Ahmia</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://6yuym3ofnhyanqea3sctvdrd3iq7jregp6nhud3axgwipva4wp6ix4id.onion/" target="_blank">http://6yuym3ofnhyanqea3sctvdrd3iq7jregp6nhud3axgwipva4wp6ix4id.onion/</a> &#45; Torch</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/" target="_blank">kn3hl4xwon63tc6hpjrwza2npb7d4w5yhbzq7jjewpfzyhsd65tm6dad.onion/</a> &#45; Onion Search Engine</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="e27slbec2ykiyo26gfuovaehuzsydffbit5nlxid53kigw3pvz6uosqd.onion/" target="_blank">e27slbec2ykiyo26gfuovaehuzsydffbit5nlxid53kigw3pvz6uosqd.onion/</a> &#45; Sentor</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://duckduckgogg42xjoc72x3sjasowoarfbgcmvfimaftt6twagswzczad.onion/" target="_blank">https://duckduckgogg42xjoc72x3sjasowoarfbgcmvfimaftt6twagswzczad.onion/</a> &#45; DuckDuckGo</li>
                 </ul>
                 <h3 class="secao__subtitulo">Email</h3>
                 <ul>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="https://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion/" target="_blank">Proton</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="vww6ybal4bd7szmgncyruucpgfkqahzddi37ktceo3ah7ngmcopnpyyd.onion/" target="_blank">RiseUp</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="eludemailxhnqzfmxehy3bk5guyhlxbunfyhkcksv4gvx6d3wcf6smad.onion/" target="_blank">Elude</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="sonarmsng5vzwqezlvtu2iiwwdn3dxkhotftikhowpfjuzg7p3ca5eid.onion/" target="_blank">Sonar</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="mail2torjgmxgexntbrmhvgluavhj7ouul5yar6ylbvjkxwqf6ixkwyd.onion/" target="_blank">Mail2Tor</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion/" target="_blank">https://protonmailrmez3lotccipshtkleegetolb73fuirgj7r4o4vfu7ozyd.onion/</a> &#45; Proton</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="vww6ybal4bd7szmgncyruucpgfkqahzddi37ktceo3ah7ngmcopnpyyd.onion/" target="_blank">vww6ybal4bd7szmgncyruucpgfkqahzddi37ktceo3ah7ngmcopnpyyd.onion/</a> &#45; RiseUp</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="eludemailxhnqzfmxehy3bk5guyhlxbunfyhkcksv4gvx6d3wcf6smad.onion/" target="_blank">eludemailxhnqzfmxehy3bk5guyhlxbunfyhkcksv4gvx6d3wcf6smad.onion/</a> &#45; Elude</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="sonarmsng5vzwqezlvtu2iiwwdn3dxkhotftikhowpfjuzg7p3ca5eid.onion/" target="_blank">sonarmsng5vzwqezlvtu2iiwwdn3dxkhotftikhowpfjuzg7p3ca5eid.onion/</a> &#45; Sonar</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="mail2torjgmxgexntbrmhvgluavhj7ouul5yar6ylbvjkxwqf6ixkwyd.onion/" target="_blank">mail2torjgmxgexntbrmhvgluavhj7ouul5yar6ylbvjkxwqf6ixkwyd.onion/</a> &#45; Mail2Tor</li>
                 </ul>
                 <h3 class="secao__subtitulo">Notícias</h3>
                 <ul>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/" target="_blank">ProPublica</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="http://darknetlidvrsli6iso7my54rjayjursyw637aypb6qambkoepmyq2yd.onion/" target="_blank">Darknetlive</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/" target="_blank">http://p53lf57qovyuvwsc6xnrppyply3vtqm7l6pcobkmyqsiofyeznfu5uqd.onion/</a> &#45; ProPublica</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://darknetlidvrsli6iso7my54rjayjursyw637aypb6qambkoepmyq2yd.onion/" target="_blank">http://darknetlidvrsli6iso7my54rjayjursyw637aypb6qambkoepmyq2yd.onion/</a> &#45; Darknetlive</li>
                 </ul>
                 <h3 class="secao__subtitulo">Misc</h3>
                 <ul>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="w27irt6ldaydjoacyovepuzlethuoypazhhbot6tljuywy52emetn7qd.onion" target="_blank">InfoCon</a></li>
-                    <li class="secao__lista__item"><a class="secao__item__link" href="http://lpiyu33yusoalp5kh3f4hak2so2sjjvjw5ykyvu2dulzosgvuffq6sad.onion/" target="_blank">Tech Learning Collective</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="w27irt6ldaydjoacyovepuzlethuoypazhhbot6tljuywy52emetn7qd.onion/" target="_blank">w27irt6ldaydjoacyovepuzlethuoypazhhbot6tljuywy52emetn7qd.onion/</a> &#45; InfoCon</li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://lpiyu33yusoalp5kh3f4hak2so2sjjvjw5ykyvu2dulzosgvuffq6sad.onion/" target="_blank">http://lpiyu33yusoalp5kh3f4hak2so2sjjvjw5ykyvu2dulzosgvuffq6sad.onion/</a> &#45; Tech Learning Collective</li>
                 </ul>
             </div>
 
