--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <div class="corpo__intro">
             <p class="texto__1">
-                Opa, beleza? Esse é um pequeno repositório com diversos links de cursos, artigos e outros conteúdos sobre tecnologia. Recomendo utilizar o atalho de busca &#40;<code>ctrl &#43; F</code>&#41; e procurar o assunto desejado.
+                Opa, beleza? Esse é um pequeno repositório com diversos links de cursos, artigos e outros conteúdos sobre tecnologia.
             </p>
             <p class="texto__2">
                 Caso tenha alguma sugestão ou queira contribuir com novos conteúdos, basta entrar em contato comigo através da XXXXXXXXXXXXXX.
