--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://knightsoftheflexboxtable.com/" target="_blank">Knights of the Flexbox table</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://www.guess-css.app/" target="_blank">Guess CSS! HTML & CSS puzzler game</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://css-speedrun.netlify.app/" target="_blank">CSS Speedrun</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Outros</h3>
                 <ul>
