--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://yarnpkg.com/" target="_blank">Yarn</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://beautifier.io/" target="_blank">js-beautify</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://github.com/airbnb/javascript" target="_blank">Airbnb JavaScript Style Guide</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/console-caper/" target="_blank">Console Caper</a> &#45; jogo sobre o objeto console</li>
                 </ul>
                 <h3 class="secao__subtitulo">C&#43;&#43;</h3>
                 <ul>
@@ -189,6 +190,7 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://dummyjson.com/" target="_blank">DummyJSON</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://jsonplaceholder.typicode.com/" target="_blank">JSON Placeholder</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://http.dog/" target="_blank">HTTP Status Dogs</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/" target="_blank">codepip - Learn to code by playing games</a></li>
                 </ul>
             </div>
 
@@ -222,6 +224,9 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://www.guess-css.app/" target="_blank">Guess CSS! HTML & CSS puzzler game</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://css-speedrun.netlify.app/" target="_blank">CSS Speedrun</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/grid-garden/" target="_blank">Grid Garden</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/selector-showdown/" target="_blank">Selector Showdown</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/css-scoops/" target="_blank">CSS Scoops</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Outros</h3>
                 <ul>
@@ -350,6 +355,7 @@
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://mystery.knightlab.com/" target="_blank">SQL Murder Mistery</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://sqlpd.com/" target="_blank">SQL Police Department</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/querymon/" target="_blank">Querymon</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Modelagem de dados</h3>
                 <ul>
