--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://github.com/practical-tutorials/project-based-learning" target="_blank">Project Based Learning</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://github.com/florinpop17/app-ideas" target="_blank">App Ideas Collection</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://dev.to/emmanx/free-figma-ui-designs-for-frontend-practice-3ak2" target="_blank">Free Figma UI designs for frontend practice</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Outros repositórios de links</h3>
                 <ul>
@@ -534,7 +535,7 @@
             </div>
 
             <div class="conteudo__secao secao__reserva">
-                <h2 class="secao__titulo" id="diver">XXXXXXXXXX</h2>
+                <h2 class="secao__titulo" id="XXXXXXX">XXXXXXXXXX</h2>
                 <h3 class="secao__subtitulo">XXXXXXXXXX</h3>
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="XXXXXXXXXX" target="_blank">XXXXXXXXXX</a></li>
