--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/grid-garden/" target="_blank">Grid Garden</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/selector-showdown/" target="_blank">Selector Showdown</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://codepip.com/games/css-scoops/" target="_blank">CSS Scoops</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="http://www.flexboxdefense.com/" target="_blank">Flexbox Defense</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://mastery.games/flexboxzombies/" target="_blank">Flexbox Zombies</a></li>
                 </ul>
                 <h3 class="secao__subtitulo">Outros</h3>
                 <ul>
