--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 <h2 class="secao__titulo" id="algcode">Algoritmos</h2>
                 <h3 class="secao__subtitulo">Prática</h3>
                 <ul>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://adventofcode.com/" target="_blank">Advent of Code</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://projecteuler.net/" target="_blank">Project Euler</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://leetcode.com/" target="_blank">LeetCode</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://www.beecrowd.com.br/" target="_blank">beecrowd</a></li>
