--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
                 </ul>
                 <h3 class="secao__subtitulo">Livros, cursos e artigos</h3>
                 <ul>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://git-scm.com/docs" target="_blank">Git Reference</a></li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://git-scm.com/book/en/v2" target="_blank">Pro Git (en)</a> &#45; excelente livro sobre git</li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://www.atlassian.com/git/tutorials/learn-git-with-bitbucket-cloud" target="_blank">Learn Git with Bitbucket Cloud (texto  &#45; en)</a> &#45; site para aprender a base do git</li>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://productoversee.com/tudo-que-voce-queria-saber-sobre-git-e-github-mas-tinha-vergonha-de-perguntar/" target="_blank">Tudo que você queria saber sobre Git e GitHub, mas tinha vergonha de perguntar (texto)</a></li>
