--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li class="intro__lista__item"><a href="#algcode" class="intro__lista__link">Algoritmos</a></li>
                 <li class="intro__lista__item"><a href="#ling" class="intro__lista__link">Linguagens de programação</a></li>
                 <li class="intro__lista__item"><a href="#api" class="intro__lista__link">APIs</a></li>
-                <li class="intro__lista__item"><a href="#css" class="intro__lista__link">CSS</a></li>
+                <li class="intro__lista__item"><a href="#css" class="intro__lista__link">CSS&#47;HTML</a></li>
                 <li class="intro__lista__item"><a href="#uiux" class="intro__lista__link">UI/UX</a></li>
                 <li class="intro__lista__item"><a href="#gerar" class="intro__lista__link">IA</a></li>
                 <li class="intro__lista__item"><a href="#git" class="intro__lista__link">Git</a></li>
@@ -181,6 +181,17 @@
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://pydesigner.readthedocs.io/en/latest/installation/pydesigner.html" target="_blank">PyDesigner</a></li>
                 </ul>
+                <h3 class="secao__subtitulo">Projetos diversos</h3>
+                <ul>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://github.com/rinaldilucas/mean-task-manager" target="_blank">MEAN Stack Task Manager</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/watch?v=3PHXvlpOkf4" target="_blank">Build 15 JavaScript Projects - Vanilla JavaScript Course</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/playlist?list=PLImJ3umGjxdD3ov2lwg0SM5rxz5v9FjOf" target="_blank">HTML & CSS PROJECTS</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/playlist?list=PLcG_K4-GCpkBhtgW46z7qp_St5yDjUzLF" target="_blank">Learn the Basics of HTML and CSS by building simple projects</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/playlist?list=PL9bD98LkBR7P16BndaNtP4x6Wf5Ib85Hm" target="_blank">JavaScript Projects For Beginners</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/playlist?list=PLtMugc7g4GaqAVDZwQ_t1H6500ZGJzOgW" target="_blank">25 Beginner JavaScript projects</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://www.youtube.com/playlist?list=PLchgFbTRb4nL_CsU6XLlEOdI2Sp859Qhg" target="_blank">Node js projects</a></li>
+                    <li class="secao__lista__item"><a class="secao__item__link" href="https://dev.to/emmanx/free-figma-ui-designs-for-frontend-practice-3ak2" target="_blank">Free Figma UI designs for frontend practice</a></li>
+                </ul>
                 <h3 class="secao__subtitulo">Misc</h3>
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://regexr.com/" target="_blank">RegExr</a> &#45; site para manipular expressões regulares</li>
@@ -213,7 +224,7 @@
             </div>
 
             <div class="conteudo__secao">
-                <h2 class="secao__titulo" id="css">CSS</h2>
+                <h2 class="secao__titulo" id="css">CSS&#47;HTML</h2>
                 <h3 class="secao__subtitulo">Cursos e tutoriais</h3>
                 <ul>
                     <li class="secao__lista__item"><a class="secao__item__link" href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/" target="_blank">A complete guide to Flexbox (texto &#45; en)</a></li>
